--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <title>Dreams | Crecimiento PyME</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bento.css">
 </head>
 <body>
     <div id="app">
-        <main class="login-split-wrapper" style="margin-top: 0; min-height: 100vh; border-radius: 0;">
+        <main class="login-split-wrapper">
                 <section class="login-brand-side">
                     <div class="brand-content">
                         <img src="assets/images/logo.png" alt="Dreams Logo" class="login-hero-logo">
@@ -30,6 +31,11 @@
                             </div>
                             <button type="submit" class="btn-primary">Entrar</button>
                         </form>
+                    <div style="margin-top: 2rem; padding-top: 1.5rem; border-top: 1px solid #f0f0f0; text-align: center;">
+                            <p style="color: #666; font-size: 0.82rem; font-weight: 400; font-style: italic; letter-spacing: 0.3px; line-height: 1.4; margin: 0;">
+                                "Prosperidad con propósito: el camino hacia una empresa con alma."
+                            </p>
+                        </div>
                     </div>
                 </section>
             </main>
