--- a/public/academia.html
+++ b/public/academia.html
@@ -1,5 +1,3 @@
-//public/academia.html
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -44,7 +42,7 @@
     </div>
 
     <div class="logo-container">
-        <img src="assets/images/logo.png" alt="Dreams Logo" class="logo-header">
+        <img id="main-logo" data-asset="logo.png" alt="Dreams Logo" class="logo-header opacity-0 transition-opacity duration-300">
     </div>
 
     <div class="contact-container" style="width: 180px; display: flex; justify-content: flex-end;">
