--- a/public/admin.html
+++ b/public/admin.html
@@ -10,8 +10,11 @@
 <body>
     <div id="app">
         <header class="navbar">
-            <h1 class="logo">DREAMS</h1>
-            <span style="font-size: 0.8rem; background: #000; color: #fff; padding: 4px 8px; border-radius: 4px;">PANEL ADMINISTRADOR</span>
+            <div class="logo-container" style="width: 180px;">
+                <img id="main-logo" data-asset="logo.png" alt="Dreams Logo" class="logo-header opacity-0 transition-opacity duration-300">
+            </div>
+            <div style="flex-grow: 1;"></div>
+            <span style="font-size: 0.7rem; background: var(--primary-midnight); color: #fff; padding: 5px 12px; border-radius: 6px; font-weight: 700; letter-spacing: 0.05em; text-transform: uppercase;">Admin Portal</span>
         </header>
 
         <main class="container">
