--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <main class="login-split-wrapper">
                 <section class="login-brand-side">
                     <div class="brand-content">
-                        <img src="assets/images/logo.png" alt="Dreams Logo" class="login-hero-logo">
+                        <img id="main-logo" data-asset="logo.png" alt="Dreams Logo" class="login-hero-logo opacity-0 transition-opacity duration-300">
                         <h1>Bienvenido a tu ecosistema de desarrollo</h1>
                         <p>La plataforma diseñada para que el líder PyME tome el control total y escale con propósito.</p>
                     </div>
