--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,7 +14,7 @@
     <div style="width: 140px;" class="hidden md:block"></div> 
     
     <div class="logo-container">
-        <img src="assets/images/logo.png" alt="Mi Empresa Crece" class="logo-header">
+        <img id="main-logo" data-asset="logo.png" alt="Mi Empresa Crece" class="logo-header opacity-0 transition-opacity duration-300">
     </div>
 
     <div class="contact-container" style="width: 160px; display: flex; justify-content: flex-end;">
