--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,9 +17,12 @@
         <img id="main-logo" data-asset="logo.png" alt="Mi Empresa Crece" class="logo-header opacity-0 transition-opacity duration-300">
     </div>
 
-    <div class="contact-container" style="width: 160px; display: flex; justify-content: flex-end;">
-        <button id="btn-open-contact" title="Enviar mensaje a contacto@miempresacrece.com.mx" style="background: var(--primary-midnight); color: white; width: 42px; height: 42px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.1rem; border: 1px solid var(--accent-gold); cursor: pointer; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(15, 52, 96, 0.15);">
+    <div class="nav-actions-container" style="width: 160px; display: flex; justify-content: flex-end; gap: 12px;">
+        <button id="btn-open-contact" title="Soporte" style="background: var(--primary-midnight); color: white; width: 42px; height: 42px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.1rem; border: 1px solid var(--accent-gold); cursor: pointer; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(15, 52, 96, 0.15);">
             ✉️
+        </button>
+        <button id="btn-logout" title="Cerrar Sesión" style="background: #fdf2f2; color: #dc2626; width: 42px; height: 42px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 1.1rem; border: 1px solid #fee2e2; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 4px 12px rgba(220, 38, 38, 0.08);">
+            🚪
         </button>
     </div>
 </header>
